# pwd-gen

./: Cargo.toml  README.md  build.rs
protos/: pwd_gen.proto  pwdgen.rs
src/client/: client.rs
src/server/: gen.rs  pg.rs  pg_grpc.rs  server.rs
